--- a/readme
+++ b/readme
@@ -4,3 +4,8 @@ TECHNOLOGIES
 i am using sass preprocessor, actively learning.
 
 tslang
+
+look to wireframe >> write from scratch.
+
+why I'm doing this?
+  because it is entertaining.
