--- a/readme
+++ b/readme
@@ -1,12 +1,11 @@
-First Edit
 a frontend development adventure.
 TECHNOLOGIES
 
-i am using sass preprocessor, actively learning.
+using sass preprocessor, actively learning.
 
 tslang
 
 look to wireframe >> write from scratch.
 
-why I'm doing this?
+why we are doing this?
   because it is entertaining.
